# api-vitrine-digital

./: .env  Cargo.toml
migrations/2021-03-02-132011_create_database/: up.sql
migrations/2021-03-02-181129_altering-demands/: down.sql  up.sql
migrations/2021-03-02-182856_changing-datetimes-to-timestamp/: up.sql
src/: login.rs  main.rs  schema.rs
src/clients/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src/demands/: create.rs  read.rs  update.rs
src/models/: arts.rs  clients.rs  demands.rs  enums.rs  mod.rs  products.rs
