[package]
name = "vitrine-digital-backend"
version = "0.1.0"
authors = ["luisvonmuller"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-identity = "0.3.1"
diesel = { version = "1.4.4", features = ["mysql", "r2d2", "chrono"] }
env_logger = "0.8"
dotenv = "0.15.0"
chrono = { version =  "0.4.19", features = ["serde", "rustc-serialize"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
r2d2 = "0.8"
rand = "0.8.3"